1.2.1 (04-12-2019)
- Improvement: Added is customExpressionValidator to profiles

1.2.0 (11-10-2019)
- Improvement: Added is locked to profiles and permissions

1.1.0 (07-10-2019)
- Refactor: Changed the name from string to localizedString of profile and permissions
- Refactor: Changed manager to restricted
- Improvement: Verify if code already exists, for profile and permission creation

1.0.0 (25-09-2019)
- Initial version release