@@ -1,3 +1,5 @@
+- Improvement: Added cache to permissions
+
 1.2.1 (04-12-2019)
 - Improvement: Added is customExpressionValidator to profiles
 
